--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,10 @@ h4 {
     color: #FAFAFA;
 }
 
+.inline-block {
+    display: inline-block;
+}
+
 /* - Heading - */
 
 header {
@@ -141,4 +145,47 @@ footer {
     color: #FAFAFA;
     min-height: 120px;
     margin: 0;
+}
+
+.cv-pdf i {
+    font-size: 18px;
+    color: #FAFAFA;
+    text-align: center;
+    padding-left: 5px;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+}
+
+.cv-pdf i:hover {
+    color: #E84610;
+}
+
+.social-links {
+    padding-bottom: 15px;
+}
+
+.social-links li a i {
+    width: 32px;
+    height: 32px;
+    padding: 12px 0;
+    border-radius: 50%;
+    font-size: 13px;
+    line-height: 7px;
+    text-align: center;
+    color: #FAFAFA;
+    background: #8F8F8F;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+}
+
+.social-links li a i:hover {
+    background: #E84610;
+}
+
+#footer-details {
+    padding: 20px;
 }
