--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,10 @@
     background-color: #FFF;
 }
 
+.bg-color-personal-info {
+    background-color: #F4F4F4;
+}
+
 .ui-menu-color-home {
     background-color: #E67E22;
 }
@@ -209,4 +213,15 @@ footer {
 
 #footer-details {
     padding: 20px;
+}
+
+/* - Three Reasons - */
+
+.three-reasons-icon {
+    font-size: 26px;
+    color: #E67E22;
+}
+
+.three-reasons-heading {
+    margin-bottom: 15px;
 }
